# microlua

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  xmake.lua
lib/littlefs/: CMakeLists.txt  README.md  lfs.c  lfs_hal.c  lfs_hal.h  pico_hal.c  pico_hal.h
ports/esp32/: CMakeLists.txt  core.h  esp32_pin.c  sdkconfig  sdkconfig.old
ports/esp32/main/: CMakeLists.txt  esp32_loslib.c  esp32_pin.c  esp32_pin.h  main.c
ports/rp2/: CMakeLists.txt  core.h  main.c  pico_libio.c  pico_pin.c  pico_pin.h  pico_posix.c  pico_posix.h  rp2_libio.c  rp2_loslib.c
ports/stm32/: CMakeLists.txt  core.h  stm32_pin.h  xmake.lua
ports/stm32/board/stm32f103c8t6/: board.h
ports/stm32/src/: stm32_pin.c  stm32_pin.h
src/: lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  lcorolib.c  lctype.c  lctype.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfsliolib.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  ljumptab.h  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  lopnames.h  loslib.c  lparser.c  lparser.h  lstate.c  (+24 more)
src/interface/: fs.c  fs.h  pin.c  pin.h
src/lua_lib/: boot.h  pin.h
test/: file_io.lua
unix/: xmake.lua
windows/: win_loslib.c  xmake.lua
